k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guessgame
  namespace: guessgame
spec:
  selector:
    app: guessgame
  ports:
     - port: 80
       targetPort: 8080
       protocol: TCP
  type: NodePort
